 # Fixed issue [#22060] Banners Options refactoring- Code missing (Jean-Marie Simonet).
 # Fixed issue [#22063] Select with optgroup not works in admin component form (Tomasz Narloch, Bill Richardson).
 # Fixed issue [#22045] block users error message (Brian Teeman, Bill Richardson, Michael Babker).
 
25-Aug-2010 Andrew Eddie
 # Fixed issue [#22032] Category editing gives error on saving/canceling (Roland Dalmulder).
 # Fixed issue [#21976] deprecated function ereg_replace mod_footer (Ronald Pijpers, Bill Richardson).
 # Fixed issue [#18506] Category Manager / Edit Category: Edit Groups + Reset to Inherit links do not work (Andy Tasch, Bill Richardson).
 # Fixed issue [#21132] User Registration Duplicate Page Headings (Amy Stephen, Bill Richardson).

-------------------- 1.6.0 Beta8 Release [23-Aug-2010] ------------------

23-Aug-2010 Ian MacLennan
 # [#21251] Hathor RTL CSS fixes
 # [#21449] Add ACL Create, Edit, & Edit State checks to Menu Manager
 # [#21540] pre-check=0, post-check=0 should not be added to Cache-Control HTTP header
 # [#21561] Display/Function of ordering arrows when sorted in descending order
 # [#21588] Readonly calendar field pops up
 # [#21613] Add an id of the same value for every form that only has a name
 # [#21614] Make administrator login work with the XML serialization and bring the form closer to XHTML strict
 # [#21767] Make pagebreak well formed
 # [#21795] Articles - Newsflash and Banners: Invalid argument
 # [#21817] JDocumentHTML::mergeHeadData() inappropriate use of array_unique
 # [#21833] Point in time to render the submenu of components
 # [#21838] TODO Raise error for missing category or parent category
 # [#21866] Notice in template style save method
 # [#21899] Bug in utf8_stristr()
 # [#21962] Add display of missing edit icons
 # [#21967] Language files are not loaded for a 3pd extension in com_categories if a 'section' is specified
 # [#21986] Use atom:link on rss feeds to identify the feeds url